# coeus-legacy

./: CMakeLists.txt  README.md  main.cpp
UNKSOTracker/: UNKSOTracker.sln
UNKSOTracker/UNKSOTracker/: AutomatedInterface.txt  AutomatedInterface2.txt  BF1GenStats.txt  BF1Stats.txt  Navy.csv  RAPTORSECRET.txt  RRR.csv  RTTT.csv  RaptorAASAO14May18_014.csv  RaptorApril14EU_002.csv  RaptorApril14EU_003.csv  RaptorApril14NA_002.csv  RaptorApril14NA_003.csv  RaptorApril7.csv  RaptorAprilEU.csv  RaptorAprilNA.csv  RaptorAprilUNK.csv  RaptorData98.txt  RaptorData99.txt  RaptorDenseMatrix14May18_002.csv  RaptorDenseMatrix14May18_014.csv  RaptorEU14May18_002.csv  RaptorEU14May18_014.csv  RaptorListAOAS.csv.csv  RaptorListEUApril.csv.csv  RaptorListNAApril.csv.csv  RaptorNA14May18_014.csv  RaptorUnknown14May18_014.csv  SiegeOPFinder2.txt  SiegeOperatives.txt  SiegeScoreTable.txt  SiegeStats.txt  arq.json  (+29 more)
UNKSOTracker2.0/: UNKSOTracker2.0.sln
bf1/: bf1.cpp
bf4/: bf4.cpp
extras/: R0001.csv  RaptorDenseMatrix20May18_014.csv  RaptorDenseMatrix_Before120May18_.csv  RaptorDenseMatrix_Before220May18_.csv  RaptorNA20May18_014.csv  parseproblem1.txt  parseproblem100.txt  parseproblem106.txt  parseproblem130.txt  parseproblem146.txt  parseproblem269.txt  parseproblem272.txt  parseproblem279.txt  parseproblem282.txt  parseproblem53.txt  parseproblem87.txt
headers/: bf1.hpp  bf4.hpp  coeus.hpp  data_fetcher.hpp  headers.hpp  interface.hpp  raptor.hpp  siege.hpp  utilities.hpp
interface/: interface.cpp
raptor/: coeus.cpp  raptor.cpp
siege/: siege.cpp
utilities/: utilities.cpp
(+93 files in other folders)
